--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,5 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-ssl
+
 # compiled output
 /dist
 /tmp
@@ -12,6 +12,7 @@ ssl
 
 # profiling files
 chrome-profiler-events*.json
+speed-measure-plugin*.json
 
 # IDEs and editors
 /.idea
