--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,6 +19,7 @@
   },
   "angularCompilerOptions": {
     "strictTemplates": true,
-    "enableI18nLegacyMessageIdFormat": false
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictDomEventTypes": false
   }
 }
