--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,9 +7,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.3"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.3"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.4"/>
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.4"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.3"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.3"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="5.0.11"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
